# src/handlers/authHandler.go
@@ -28,6 +28,16 @@ func (h *authHandler) RegisterRoutes(router *gin.RouterGroup) {
 	//POST("/authentication/login", h.Login)
 }
 
+// @Summary      Регистрация пользователя
+// @Description  Регистрирует пользователя в системе
+// @Tags         authentication
+// @Accept       json
+// @Produce      json
+// @Param        user  body      models.RegistrationUserRequest  true  "Данные для регистрации пользователя"
+// @Success      200
+// @Failure      400     {object}  map[string]string
+// @Failure      500     {object}  map[string]string
+// @Router       /authentication/registration [post]
 func (h *authHandler) Registration(ctx *gin.Context) {
 	var user models.RegistrationUserRequest
 	if err := ctx.ShouldBindJSON(&user); err != nil {
@@ -41,16 +51,26 @@ func (h *authHandler) Registration(ctx *gin.Context) {
 	ctx.Status(http.StatusOK)
 }
 
-// func (h *authHandler) Login(ctx *gin.Context) {
-// 	var user models.User
-// 	if err := ctx.ShouldBindJSON(&user); err != nil {
-// 		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	token, inError := h.authService.LoginByBearerToken(user)
-// 	if inError != nil {
-// 		ctx.AbortWithStatusJSON(inError.Code, inError)
-// 		return
-// 	}
-// 	ctx.String(http.StatusOK, token)
-// }
+// @Summary      Вход в систему
+// @Description  Вход пользователя в систему по логину и паролю. Возвращает jwt токен
+// @Tags         authentication
+// @Accept       json
+// @Produce      json
+// @Param        user  body      models.User  true  "Данные для входа пользователя"
+// @Success      200 {string} string "JWT токен"
+// @Failure      400     {object}  map[string]string
+// @Failure      500     {object}  map[string]string
+// @Router       /authentication/login [post]
+func (h *authHandler) Login(ctx *gin.Context) {
+	var user models.User
+	if err := ctx.ShouldBindJSON(&user); err != nil {
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	token, inError := h.authService.LoginByBearerToken(user)
+	if inError != nil {
+		ctx.AbortWithStatusJSON(inError.Code, inError)
+		return
+	}
+	ctx.String(http.StatusOK, token)
+}
